maze.shortestpath.ShortestPathMaze.scala.error
Erreur de compilation :
ShortestPathMaze:4: error: not found: value getMondeLongueur
    for (i <- 1 to getMondeLongueur()) {
                   ^ShortestPathMaze:3: error: type mismatch;
 found   : Unit
 required: (Int, Int)
  for (j <- 1 to getMondeLargeur()){
         ^ShortestPathMaze:18: error: not found: value getMondeLongueur
  while (nb != getMondeLongueur()*getMondeLargeur()){
               ^ShortestPathMaze:19: error: not found: value getMondeLongeur
    for (i <- 1 to getMondeLongeur()){
                   ^